--- a/src/css/instruction.module.css
+++ b/src/css/instruction.module.css
@@ -31,7 +31,6 @@
 }
 
 .instructions__bullet {
-  display: block;
   margin-bottom: 0.5rem;
 }
 
